# inferx

./: Cargo.toml  Makefile  README.md  README1.md  doc  docker-compose.yml  docker-compose_blob.yml  inferx-realm.json  ixctl_logging_config.yaml
config/: Aquila-7B.json  BAAI_namespace.json  Baichuan-7B.json  Baichuan2-13B-Chat-4bits.json  Baichuan2-7B-Chat.json  DeciLM-7B-instruct.json  DeciLM-7B.json  Deci_namespace.json  DeepSeek-R1-Distill-Llama-8B.json  DeepSeek-R1-Distill-Qwen-1.5B.json  DeepSeek-R1-Distill-Qwen-7B.json  EXAONE-3.0-7.8B-Instruct copy.json  EXAONE-3.0-7.8B-Instruct.json  EleutherAI_namespace.json  Llama-2-13b-hf.json  Llama-3.2-3B-Instruct.json  Llama-3.2-3B-Instruct_2gpu.json  Meta-Llama-3-8B-Instruct.json  Meta-Llama-3-8B.json  MiniCPM-2B-dpo-bf16.json  MiniCPM-2B-sft-bf16.json  MiniCPM3-4B.json  Minitron-8B-Base.json  Mistral-7B-Instruct-v0.1.json  Mistral-7B-v0.1.json  Mistral-7B-v0.1_2gpu.json  OLMo-1B-hf.json  OLMo-1B-hf_2gpu.json  OLMo-7B-hf.json  OLMoE-1B-7B-0924-Instruct.json  OLMoE-1B-7B-0924.json  OpenAssistant_namespace.json  Phi-3-mini-128k-instruct.json  Phi-3-mini-4k-instruct.json  Qwen-VL-Chat.json  Qwen.json  Qwen1.5-MoE-A2.7B.json  Qwen2.5-1.5B.json  Qwen2.5-7B-Instruct-1M.json  Qwen2.5-7B-Instruct-GPTQ-Int8.json  (+85 more)
dashboard/: Makefile  app.py  client.py  gunicorn.conf.py  na_pb2.py  na_pb2_grpc.py  nginx.conf  qobjs_pb2.py  qobjs_pb2_grpc.py  requirements.txt
deployment/: dashboard.Dockerfile  llava.Dockerfile  one.Dockerfile  spdk.Dockerfile  spdk.script  spdk2.Dockerfile  vllm-opai.Dockerfile
doc/: daemon.json  deployment_instruction.md  keycloak.md
inferxlib/: Cargo.toml
inferxlib/src/: common.rs  data_obj.rs  lib.rs  node.rs  resource.rs  selector.rs
inferxlib/src/obj_mgr/: func_mgr.rs  funcsnapshot_mgr.rs  mod.rs  namespace_mgr.rs  node_mgr.rs  pod_mgr.rs  tenant_mgr.rs
ixctl/: command.rs  create.rs  delete.rs  get.rs  list.rs  main.rs  object_client.rs  update.rs
k8s_manifests/: 00-namespace.yaml  01-secret-db-config.yaml  02-audit-db-config.yaml  03-secret-db.yaml  04-audit-db.yaml  05-etcd.yaml  06-keycloak-db.yaml  07-keycloak.yaml  09-inferx-one.yaml  (+4 more)
(+20 files in other folders)
