[package]
name = "qservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inferxlib = { path = "./inferxlib" }

libc = "0.2.94"
tokio = { version = "1.25", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.8" }
hostname = "^0.3"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
regex = "1.7.1"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
chrono = "0.4.24"
tower = "0.4.13"
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
simple-logging = "2.0.2"
log = "0.4.17"
log4rs = "1"
const_format = "0.2.30"
local-ip-address = "0.5.1"
once_cell = "1.17.1"
ipnetwork = "0.20.0"
scopeguard = { version = "^1.1.0", default-features = false }
errno = "0.2.4"
nix = "0.23.1"
futures = "0.3"
dns-lookup = "2.0.4"
#clap = "4.5.9"
clap = "2.33.3"

axum = "0.7.4"
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
http-body-util = "0.1"
backtrace = "0.3.74"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.uuid]
version = "1.3.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[[bin]]
name = "ixctl"
path = "ixctl/main.rs"
