[package]
name = "inferxlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.7.1"
bollard = "=0.17.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
log = "0.4.17"
log4rs = "1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
